--- a/MLSpring2018/Homeworks/Homework+1+ML+Spring+2018+%28Aleister+Montfort%29.ipynb
+++ b/MLSpring2018/Homeworks/Homework+1+ML+Spring+2018+%28Aleister+Montfort%29.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can find this jupyter notebook at\n",
+    "https://github.com/aleistermi/ML-Spring-2018/blob/master/MLSpring2018/Homeworks/Homework%2B1%2BMachine%2BLearning%2BSpring%2B2018%2BVF.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# -HOMEWORK 1-"
    ]
   },
@@ -519,52 +527,6 @@
    ],
    "source": [
     "test= request_census(41.97,-87.67)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 352,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "170310310003010\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 412,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'031000'"
-      ]
-     },
-     "execution_count": 412,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test[5:11]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "DP03_0119PE Percentage of families living in poverty. All families\n",
-    "DP05_0033PE\tRACE!!One race!!Black or African American\n",
-    "DP04_0081PE\tVALUE!!Owner-occupied units!!Less than $50,000\n"
    ]
   },
   {
