--- a/MLSpring2018/Homeworks/Homework2/Homework 2 VF.ipynb
+++ b/MLSpring2018/Homeworks/Homework2/Homework 2 VF.ipynb
@@ -238,7 +238,15 @@
    "outputs": [],
    "source": [
     "def plot_hist(df, variable, num_bins):\n",
-    "    '''plots a variable of interest'''\n",
+    "    '''\n",
+    "    Creates a histogram plot using a dataframe df for\n",
+    "    a variable of interest\n",
+    "    \n",
+    "    Inputs:\n",
+    "        df-> Dataframe\n",
+    "        variable -> variable of interest\n",
+    "        num_bins -> number of bins\n",
+    "    '''\n",
     "    \n",
     "    plt.hist(df[variable].dropna(), bins=num_bins)\n",
     "    plt.title('Distribution of'+ ' '+  variable)\n",
@@ -276,8 +284,18 @@
    "outputs": [],
    "source": [
     "def corr_pair(df, variable):\n",
-    "    '''Create a dataframe with the correlation values of\n",
-    "    the variable and the rest of the variables in a dataframe'''\n",
+    "    '''\n",
+    "    Creates a dataframe with the correlation values of\n",
+    "    the variable and the rest of the variables in a dataframe\n",
+    "    \n",
+    "    Inputs:\n",
+    "    df-> dataframe\n",
+    "    variable: the variable of interest which the correlation coefficients\n",
+    "    are calculated with\n",
+    "    \n",
+    "    Returns: \n",
+    "    Dataframe\n",
+    "    '''\n",
     "    dic = {}\n",
     "    for element in list(set(list(df)) - set(list(variable))):\n",
     "        dic[element] = df[variable].corr(data[element])\n",
@@ -294,7 +312,8 @@
    "source": [
     "def count_nulls(df):\n",
     "    '''\n",
-    "    count the number of missing values per variable\n",
+    "    Counts the number of missing values per variable in a dataframe\n",
+    "    Returns: Dataframe\n",
     "    '''\n",
     "    dic = {}\n",
     "    for element in list(df):\n",
@@ -1556,11 +1575,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 911,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cap_values(x, cap):\n",
+    "    ''' \n",
+    "    if a value exceeds the threshold cap, it returns\n",
+    "    the value cap, otherwise the same value'''\n",
+    "    \n",
     "    if x > cap:\n",
     "        return cap\n",
     "    else:\n",
@@ -2266,6 +2289,13 @@
    "outputs": [],
    "source": [
     "def cap_outliers(x):\n",
+    "    '''\n",
+    "    Assigns the median value of an upward outlier\n",
+    "    Inputs: Dataframe\n",
+    "    Returns: Dataframe\n",
+    "    \n",
+    "    i.e. data['DebtRatio_wo_ol'] = cap_outliers(data['DebtRatio'])\n",
+    "    '''\n",
     "    mask = (x >= x.quantile(.95))\n",
     "    x[mask] = x.median()\n",
     "    return x"
@@ -3133,31 +3163,6 @@
    "source": [
     "features = best_features[:6]\n",
     "data[features].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 896,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cap_outliers(x):\n",
-    "    mask = (x >= x.quantile(.95))\n",
-    "    x[mask] = x.median()\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 897,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cap_values(x, cap):\n",
-    "    if x > cap:\n",
-    "        return cap\n",
-    "    else:\n",
-    "        return x"
    ]
   },
   {
@@ -4624,13 +4629,6 @@
    "source": [
     "len(x_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
